--- a/public/static/site.css
+++ b/public/static/site.css
@@ -1,12 +1,27 @@
 
 /* Page */
 
+html, body, #root {
+    height: 100%;
+    min-height: 100% !important;
+}
+
+
 .page-color {
-    background-color: var(--bs-gray-700); 
+    background-color: var(--bs-gray-200); 
+    height: 100%;
 }
 
 
 /* Nav */
+
+.sticky-top {
+    position: sticky;
+}
+
+.header-bg {
+    background-color: var(--bs-gray-700); 
+}
 
 .header-logo {
     width: 300px; 
