--- a/public/static/site.css
+++ b/public/static/site.css
@@ -98,6 +98,13 @@ html, body, #root {
     color: #013369; 
 }
 
+/* Tournament */
+
+.video-links {
+    text-decoration: none;
+    color: #013369;
+}
+
 /* General */
 
 .font-xx-small {
