--- a/public/static/site.css
+++ b/public/static/site.css
@@ -105,6 +105,74 @@ html, body, #root {
     color: #013369;
 }
 
+.scorecard-type {
+    cursor: pointer;
+}
+
+.scorecard-table-wrapper {
+    overflow-x: scroll;
+}
+
+.scorecard-cell-lg {
+    min-width: 160px;
+}
+
+.scorecard-cell-md {
+    min-width: 120px;
+}
+
+.scorecard-cell-sm {
+    min-width: 40px;
+}
+
+table {
+    white-space: nowrap;
+    margin: 0;
+    border: none;
+    border-collapse: separate;
+    border-spacing: 0;
+    table-layout: fixed;
+    border: 1px solid black;
+  }
+
+  table td,
+  table th {
+    border: 1px solid black;
+    /* padding: 0.5rem 1rem; */
+  }
+  table thead th {
+    padding: 3px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    width: 25vw;
+    background: white;
+  }
+  table td {
+    background: #fff;
+    /* padding: 4px 5px; */
+    text-align: center;
+  }
+  
+  table tbody th {
+    font-weight: 100;
+    font-style: italic;
+    text-align: left;
+    position: relative;
+  }
+  table thead th:first-child {
+    position: sticky;
+    left: 0;
+    z-index: 2;
+  }
+  table tbody th {
+    position: sticky;
+    left: 0;
+    background: white;
+    z-index: 1;
+  }
+
+
 /* General */
 
 .font-xx-small {
