--- a/public/static/site.css
+++ b/public/static/site.css
@@ -5,6 +5,7 @@ html, body, #root {
     height: 100%;
     min-height: 100% !important;
     background-color: var(--bs-gray-200); 
+    overflow-x: hidden;
 }
 
 
