--- a/public/static/site.css
+++ b/public/static/site.css
@@ -145,7 +145,7 @@ html, body, #root {
     color: #013369;
 }
 
-.scorecard-type, .big8-contest {
+.scorecard-type, .big8-contest, .past-tourn-entry {
     cursor: pointer;
 }
 
