--- a/public/static/site.css
+++ b/public/static/site.css
@@ -133,6 +133,22 @@ html, body, #root {
     color: #013369; 
 }
 
+.filter-icon-bg, .filter-icon-bg:hover {
+    background-color: white;
+    color: #013369; 
+    border-radius: 25px;
+}
+
+.filter-submit {
+    background-color: #013369; 
+    color: white; 
+}
+
+.filter-submit:hover {
+    opacity: 80%;
+    color: white; 
+}
+
 .video-icon-nolink {
     min-width: 50px;
     color: #013369; 
@@ -225,6 +241,11 @@ table {
 .track-img-height {
     min-height: 500px; 
     height: 100%; 
+}
+
+/* Run Search */
+.filter-bg {
+    background-color: var(--bs-gray-200);
 }
 
 /* General */
