fixed query params for BE request for Top Runs, added FE query params for seach

--- a/public/static/site.css
+++ b/public/static/site.css
@@ -248,6 +248,10 @@ table {
     background-color: var(--bs-gray-200);
 }
 
+.min-loading-height {
+    min-height: 600px;
+}
+
 /* General */
 
 .font-xx-small {
