--- a/public/static/site.css
+++ b/public/static/site.css
@@ -44,15 +44,15 @@ html, body, #root {
     background-color: #001d3c;
 }
 
-.nav-bg-color, .schedule-entry-button, .track-name-bg-color {
+.nav-bg-color, .schedule-entry-button, .track-name-bg-color, .login-button {
     background-color: #013369;
 }
 
-.hover-nav-font-change, .schedule-entry-button, .track-name-color {
+.hover-nav-font-change, .schedule-entry-button, .track-name-color, .login-button, .login-button:hover {
     color: var(--bs-white)
 }
 
-.schedule-entry-button:hover {
+.schedule-entry-button:hover, .login-button:hover {
     opacity: 80%;
     cursor: pointer;
 }
@@ -71,6 +71,29 @@ html, body, #root {
     color: var(--bs-white);
     cursor: pointer;
 }
+
+/* Footer */
+
+.content {
+    padding-bottom: 80px;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+    height: 80px; 
+}
+
+.footer-bg {
+    background-color: whitesmoke; 
+}
+
+
 
 /* Home */
 
@@ -252,6 +275,27 @@ table {
     min-height: 600px;
 }
 
+/* Login */
+
+.login-input {
+    padding: 12px 20px;
+    border: 2px solid gray;
+    border-radius: 4px;
+}
+
+.login-input:focus {
+    background-color: aliceblue;
+    border: 2px solid black;
+}
+
+/* Admin */
+
+.content-box {
+    background-color: white;
+    border-radius: 4px;
+}
+
+
 /* General */
 
 .font-xx-small {
@@ -290,6 +334,6 @@ table {
     white-space: break-spaces;
 }
 
-.year-count-width {
+.year-count-width, .admin-btn {
     min-width: 250px;
 }
