--- a/public/static/site.css
+++ b/public/static/site.css
@@ -36,7 +36,7 @@ html, body, #root {
 
 
 .header-logo {
-    width: 450px; 
+    max-width: 450px; 
     cursor: pointer;
 }
 
@@ -131,16 +131,8 @@ html, body, #root {
     cursor: pointer;
 }
 
-.schedule-entry-tournament-circuit-nassau, 
-.schedule-entry-tournament-circuit-northern, 
-.schedule-entry-tournament-circuit-suffolk,
-.schedule-entry-tournament-circuit-western,
-.schedule-entry-tournament-circuit-oldfashioned,
-.schedule-entry-tournament-circuit-junior {
-    background-color: var(--bs-gray-700);
-    width: 40px;
-    color: var(--bs-white);
-    user-select: none;
+.cursor-default { 
+    cursor: default; 
 }
 
 .circuit-inactive {
@@ -368,17 +360,13 @@ table {
 }
 
 .image-wrap-md {
-    min-width: 50px; 
-    min-height: 50px; 
-    max-width: 100px; 
-    max-height: 100px; 
+    width: 100px; 
+    height: 100px; 
 }
 
 .image-wrap-lg {
-    min-width: 50px; 
-    min-height: 50px; 
-    max-width: 150px; 
-    max-height: 150px; 
+    width: 150px; 
+    height: 150px; 
 }
 
 .fluid-width {
