--- a/public/static/site.css
+++ b/public/static/site.css
@@ -3,6 +3,8 @@
 :root {
     --button-blue: hwb(210 25% 33%);
     --button-blue-hover: hwb(210 19% 44%);
+    --nav-bg-dk: #001d3c; 
+    --nav-bg: #013369; 
 }
 
 
@@ -41,11 +43,11 @@ html, body, #root {
 }
 
 .nav-bg-color-dk {
-    background-color: #001d3c;
+    background-color: var(--nav-bg-dk)
 }
 
 .nav-bg-color, .schedule-entry-button, .track-name-bg-color, .login-button, .add-entry-button {
-    background-color: #013369;
+    background-color: var(--nav-bg);
 }
 
 .hover-nav-font-change, .schedule-entry-button, .track-name-color, .login-button, .login-button:hover, .add-entry-button, .add-entry-button:hover {
@@ -63,7 +65,7 @@ html, body, #root {
 }
 
 .underline-hover {
-    border-bottom: 2px solid #013369; 
+    border-bottom: 2px solid var(--nav-bg)
 }
 
 .underline-hover:hover {
@@ -83,7 +85,7 @@ html, body, #root {
 }
 
 .footer {
-    background-color: var(--bs-gray-500); 
+    background-color: var(--bs-gray-400); 
     position: fixed;
     left: 0;
     bottom: 0;
@@ -93,6 +95,17 @@ html, body, #root {
     height: 80px; 
 }
 
+.underline-hover-ft {
+    border-bottom: 2px solid var(--bs-gray-600)
+}
+
+.underline-hover-ft:hover {
+    border-bottom: 2px solid white;
+    color: var(--bs-white);
+    cursor: pointer;
+}
+
+
 
 /* Home */
 
@@ -101,7 +114,7 @@ html, body, #root {
   }
 
 .live-stream-planned {
-    background-color: #013369; 
+    background-color: var(--nav-bg)
     padding: 5px;
     border-radius: 5px;
     color: white; 
@@ -144,17 +157,17 @@ html, body, #root {
 }
 
 .video-icon > a {
-    color: #013369; 
+    color: var(--nav-bg)
 }
 
 .filter-icon-bg, .filter-icon-bg:hover {
     background-color: white;
-    color: #013369; 
+    color: var(--nav-bg)
     border-radius: 25px;
 }
 
 .filter-submit {
-    background-color: #013369; 
+    background-color: var(--nav-bg)
     color: white; 
 }
 
@@ -165,14 +178,22 @@ html, body, #root {
 
 .video-icon-nolink {
     min-width: 50px;
-    color: #013369; 
+    color: var(--nav-bg)
 }
 
 /* Tournament */
 
 .video-links, .map-location-links, .crud-links {
     text-decoration: none;
-    color: #013369;
+    color: var(--nav-bg)
+}
+
+.current-record {
+    color: gold; 
+}
+
+.former-record {
+    color: goldenrod; 
 }
 
 .scorecard-type, .past-tourn-entry {
