--- a/public/static/site.css
+++ b/public/static/site.css
@@ -314,6 +314,15 @@ table {
     cursor: pointer;
 }
 
+.custom-tooltip {
+    background-color: white;
+    color: black; 
+    padding: 4px; 
+    border-radius: 4px;
+    border: 1px solid black; 
+    font-size: x-small;
+}
+
 
 /* Login */
 
