--- a/public/static/site.css
+++ b/public/static/site.css
@@ -461,3 +461,8 @@ html, body, #root {
     border-radius: 5px; 
     padding: 5px; 
 }
+
+  .accordion-button:not(.collapsed) {
+    color: #FFF  !important;
+    background-color: var(--button-blue) !important;
+  }
