--- a/public/static/site.css
+++ b/public/static/site.css
@@ -358,6 +358,15 @@ html, body, #root {
     cursor: pointer; 
 }
 
+/* Broadcast */
+
+.broadcast {
+    padding: 100px; 
+    background-color: #00ff00;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+}
+
 
 /* General */
 
