--- a/public/static/site.css
+++ b/public/static/site.css
@@ -16,12 +16,12 @@ html, body, #root {
     min-height: 100% !important;
     background-color: var(--bs-gray-200); 
     overflow-x: hidden;
-}
 
-.special-font {
-    font-family: 'Barlow Condensed', 'Open Sans', sans-serif;
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
-
 
 
 /* Nav */
@@ -40,7 +40,8 @@ html, body, #root {
 }
 
 .champs-bg {
-    height: 300px;
+    min-height: 300px;
+    height: 100%; 
 }
 
 .header-logo {
@@ -82,6 +83,10 @@ html, body, #root {
 
 .banner a, .banner a:hover .banner a:visited {
     color: var(--bs-gray-500)
+}
+
+.grayText {
+    color: var(--bs-gray-600)
 }
 
 .dropdown-pos-top {
@@ -495,3 +500,7 @@ html, body, #root {
     color: #FFF  !important;
     background-color: var(--button-blue) !important;
   }
+
+.trophyGold {
+    color: #a67c00; 
+}
