edited location hover

--- a/public/static/site.css
+++ b/public/static/site.css
@@ -544,3 +544,5 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 .gmnoprint div {
     background:none !important;
 }
+
+.gm-style-iw-chr {display: none;}
