--- a/public/static/site.css
+++ b/public/static/site.css
@@ -13,7 +13,7 @@
 /* Page */
 
 html, body, #root {
-    height: 100%;
+    /* height: 100%; */
     min-height: 100% !important;
     background-color: var(--bs-gray-200); 
     overflow-x: hidden;
@@ -524,6 +524,10 @@ html, body, #root {
 
 .track-image-mx-ht {
     max-height: 800px;
+}
+
+.max-width-100 {
+    max-width: 100%;
 }
 
 /* Unwanted Google Maps Divs:  */
