--- a/public/static/site.css
+++ b/public/static/site.css
@@ -35,6 +35,10 @@ html, body, #root {
     position: sticky;
 }
 
+.h-100 {
+    height: 100%
+}
+
 .banner-bg {
     background-color: lightgoldenrodyellow; 
 }
@@ -523,7 +527,7 @@ html, body, #root {
 }
 
 .track-image-mx-ht {
-    max-height: 800px;
+    max-height: 600px;
 }
 
 .max-width-100 {
