finish draft and game

--- a/public/static/site.css
+++ b/public/static/site.css
@@ -575,3 +575,28 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 }
 
 .gm-style-iw-chr {display: none;}
+
+.bouncing-growing {
+    animation: bounceAndGrow 2s ease-in-out infinite;
+}
+  
+@keyframes bounceAndGrow {
+    0%, 100% {
+        transform: translateY(0) scale(1); 
+    }
+    50% {
+        transform: translateY(-5px) scale(1.05); 
+    }
+}
+
+#dropdown-town-search::after{
+    display: none; 
+ }
+
+#dropdown-town-search:hover {
+    background-color: var(--button-blue-hover);
+}
+
+.w-250 {
+    width: 250px;
+}
